tests/programs/syntax_error_import/syntax_error.stderr

SyntaxError: missing comma in argument list
at programs/syntax_error_import/syntax_error.re:3:1