tests/programs/syntax_error_import/syntax_error.re
# intentional syntax error for testing `syntax_error_import.re`
def(a, x, x)
def(b, y, _())